# openapi.yaml
@@ -4,17 +4,18 @@ info:
   description: API for managing local business transactions
   version: 1.0.0
 servers:
-  - url: http://localhost:4200
+  - url: http://localhost:4400
     description: Local development server
   - url: https://api.villagedeals.com
-    description: Production server  
+    description: Production server
 paths:
-  /health-check:
+  /api/v1/health-check:
     get:
       summary: Get a welcoming message
       description: Returns a welcoming message to the user.
+      tages: -Health check
       responses:
-        '200':
+        "200":
           description: A welcoming message
           content:
             application/json:
@@ -24,3 +25,247 @@ paths:
                   message:
                     type: string
                     example: "Welcome to VillageDeals!"
+  /api/v1/users/register:
+    post:
+      summary: Register a new user
+      description: Allows a user to register by providing the necessary details.
+      tags:
+        - Users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - firstName
+                - password
+              properties:
+                firstName:
+                  type: string
+                  example: "John"
+                secondName:
+                  type: string
+                  example: "Doe"
+                email:
+                  type: string
+                  format: email
+                  example: "john.doe@example.com"
+                password:
+                  type: string
+                  format: password
+                  example: "P@ssw0rd"
+                profileImage:
+                  type: string
+                  format: uri
+                  example: "https://example.com/profile.jpg"
+                phoneNumber:
+                  type: string
+                  example: "1234567890"
+                role:
+                  type: string
+                  enum: ["USER", "MANAGER", "ADMIN", "SELLER"]
+                  example: "USER"
+                gender:
+                  type: string
+                  enum: ["Male", "Female", "Other", "Prefer not to say"]
+                  example: "Male"
+                dob:
+                  type: string
+                  format: date
+                  example: "2000-01-01"
+                companyId:
+                  type: string
+                  example: "e328d328-d7c3-42a2-8ba2-032c4c82ea41"
+      responses:
+        "201":
+          description: User successfully registered
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  userId:
+                    type: string
+                    format: uuid
+                    example: "123e4567-e89b-12d3-a456-426614174000"
+                  message:
+                    type: string
+                    example: "User registered successfully."
+        "400":
+          description: Invalid input data
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Invalid request data."
+  /api/v1/users:
+    get:
+      summary: Retrieve a list of users
+      description: Fetches all users from the database.
+      tags:
+        - Users
+      responses:
+        "200":
+          description: Successfully retrieved users.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: object
+                    example: Users retrieved successfully
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                          format: uuid
+                          example: "550e8400-e29b-41d4-a716-446655440000"
+                        firstName:
+                          type: string
+                          example: "John"
+                        secondName:
+                          type: string
+                          example: "Doe"
+                        email:
+                          type: string
+                          format: email
+                          example: "johndoe@example.com"
+                        profileImage:
+                          type: string
+                          format: uri
+                          example: "https://example.com/profile.jpg"
+                        gender:
+                          type: string
+                          enum: [Male, Female, Other]
+                          example: "Male"
+                        dob:
+                          type: string
+                          format: date
+                          example: "1990-01-01"
+                        phoneNumber:
+                          type: string
+                          example: "+123456789"
+                        role:
+                          type: string
+                          example: "USER"
+                        companyId:
+                          type: string
+                          format: uuid
+                          example: "a1b2c3d4-e5f6-7890-ab12-34567890cdef"
+                        isActive:
+                          type: boolean
+                          example: true
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Internal Server Error"
+  /api/v1/users/{id}:
+    get:
+      summary: Retrieve a user by ID
+      description: Fetches a single user from the database using their unique ID.
+      tags:
+        - Users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The unique ID of the user to retrieve.
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Successfully retrieved user.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                        format: uuid
+                        example: "550e8400-e29b-41d4-a716-446655440000"
+                      firstName:
+                        type: string
+                        example: "John"
+                      secondName:
+                        type: string
+                        example: "Doe"
+                      email:
+                        type: string
+                        format: email
+                        example: "johndoe@example.com"
+                      profileImage:
+                        type: string
+                        format: uri
+                        example: "https://example.com/profile.jpg"
+                      gender:
+                        type: string
+                        enum: [Male, Female, Other]
+                        example: "Male"
+                      dob:
+                        type: string
+                        format: date
+                        example: "1990-01-01"
+                      phoneNumber:
+                        type: string
+                        example: "+123456789"
+                      role:
+                        type: string
+                        example: "USER"
+                      companyId:
+                        type: string
+                        format: uuid
+                        example: "a1b2c3d4-e5f6-7890-ab12-34567890cdef"
+                      isActive:
+                        type: boolean
+                        example: true
+        "404":
+          description: User not found.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "User not found"
+        "500":
+          description: Internal Server Error.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Internal Server Error"
